# HKEMLint

./: README.md  __main__.py  cli.py  pyproject.toml
StandardDataset/: card_sorting.csv  cards.csv  draft-irtf-cfrg-hybrid-kems-10.txt  independent_sorting.csv  requirements.csv
checkers/: base.py  s4_encap_zeroize.py
cpg/: cfg_builder.py  models.py
hkemlint/checkers/: s1_param_mismatch.py  s2_combiner.py  s3_domain.py  s5_decap_zeroize.py  s6_fallback.py
hkemlint/cpg/: cpg_builder.py  labeler.py
hkemlint/locator/: parser.py  site_finder.py
hkemlint/neo4j_backend/: cpg_fraunhofer.py  driver.py  schema_adapter.py
hybridlint/: __init__.py  __main__.py  cli.py
hybridlint/checkers/: base.py  s1_param_mismatch.py  s2_combiner.py  s3_domain.py  s4_encap_zeroize.py  s5_decap_zeroize.py  s6_fallback.py  sp1_combiner.py  sp2_atomicity.py  sp3_independence.py  sp4_negotiation.py
hybridlint/cpg/: cfg_builder.py  cpg_builder.py  labeler.py  models.py
hybridlint/locator/: call_graph.py  keywords.py  parser.py  site_finder.py
hybridlint/neo4j_backend/: __init__.py  checkers_cypher.py  cpg_fraunhofer.py  driver.py  exporter.py  labeler_cypher.py  schema_adapter.py
locator/: call_graph.py  keywords.py
neo4j_backend/: checkers_cypher.py  exporter.py  labeler_cypher.py
