[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hkemlint"
version = "0.1.0"
description = "Detect hybrid KEM security property violations"
requires-python = ">=3.9"
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "networkx>=3.0",
    "click>=8.0",
]

[tool.setuptools.packages.find]
include = ["hkemlint*"]

[project.scripts]
hkemlint = "hkemlint.cli:main"

[project.optional-dependencies]
neo4j = ["neo4j>=5.0"]
dev = ["pytest>=7.0", "neo4j>=5.0"]
